[package]
name = "how_many_lines"
version = "0.1.0"
authors = ["shiyao <sos1sos2harry@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
yaml-rust = "0.4.4"
lazy_static = "1.4.0"
rayon = "1.5.0"
colored = "2.0.0"
